# rss-feeds

./: .gitignore  README.md
.github/: renovate.json
.github/workflows/: ci.yml
docs/: https___anchor.fm_s_d5a0c50_podcast_rss.aaeb84bd.json  https___www.youtube.com_feeds_videos.xml_channel_id_UCea_GJg5QGvycBOrYjjkMJg.e07e7dc2.json
tools/rss_retriever/: pyproject.toml
tools/rss_retriever/rss_retriever/: __init__.py  __main__.py  _datastore.py
