[tool.poetry]
name = "rss-retriever"
version = "0.1.0"
description = "A cli to retrieve and grow RSS feeds"
authors = ["Maker By Night <2565361+mshafer1@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# CLI
click = "^8.3.1"

# Core tools
requests = "^2.32.5"
xmltodict = "^1.0.2"
markupsafe = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
